Move .custom-bullets to .bullets, fix a small spacing problem

--- a/src/less/section.less
+++ b/src/less/section.less
@@ -13,10 +13,6 @@
 }
 
 main {
-  .half-page {
-    .padding-sides-0();
-  }
-
   .block {
     padding-bottom: 0.5rem;
   }
@@ -31,6 +27,12 @@ main {
 
     .bullets {
       .padding-left-bs();
+      margin-left: 3px;
+
+      span {
+        position: relative;
+        left: -3px;
+      }
     }
 
     .section-inner-header + .bullets {
@@ -67,10 +69,7 @@ main {
 
     .experience-dateloc {
       text-align: right;
-
-      @media (max-width: @screen-sm-max) {
-        text-align: left;
-      }
+      flex: 1 0 auto;
 
       .location {
         font-size: 0.9rem;
